--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -54,8 +54,8 @@
 @import "foundation/scss/foundation/functions";
 
 // These are defined here in pixel values in order to keep compass from showing warnings in the grunt build
-$base-font-size: 14px; // Browser default
-$base-line-height: 21px; // Browser default
+$base-font-size: 13px; // Browser default
+$base-line-height: 20px; // Browser default
 
 // Foundation rem-base
 $rem-base: $base-font-size;
@@ -106,6 +106,7 @@ $success-color: #1870bb;
 $success-color-dark: #2556ae;
 $success-color-light: #5897f3;
 $success-color-light-2x: #749ad6;
+$success-color-light-3x: lighten($success-color-light-2x, 32%);
 // Alert colors - Red
 $alert-color: #ff3333;
 $alert-color-dark: darken($alert-color, 10%);
@@ -118,7 +119,7 @@ $warning-color-light: #fec325;
 $disabled-color: $secondary-color-light-2x;
 
 // Global style colors
-$body-bg: $secondary-color-light-2x;
+$body-bg: $secondary-color-light-4x;
 $body-font-color: $secondary-color-dark;
 
 
