* Added a new menu to the popup.

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -89,12 +89,14 @@ $black: #000000;
 
 // Primary colors - Green and variations
 $primary-color: #006633;
+$primary-color-dark: darken($primary-color, 5%);
 $primary-color-light: #588b48;
 $primary-color-light-2x: #639b5a;
 $primary-color-light-3x: #a9e09d;
 // Secondary colors - Gray and variations
-$secondary-color-dark-3x: #060606;
-$secondary-color-dark-2x: #333333;
+$secondary-color-dark-4x: #060606;
+$secondary-color-dark-3x: #333333;
+$secondary-color-dark-2x: #444444;
 $secondary-color-dark: #5e6063;
 $secondary-color: #808184;
 $secondary-color-light: #b7b7b7;
@@ -119,8 +121,8 @@ $warning-color-light: #fec325;
 $disabled-color: $secondary-color-light-2x;
 
 // Global style colors
-$body-bg: $secondary-color-light-4x;
-$body-font-color: $secondary-color-dark;
+$body-bg: $secondary-color-dark-3x;
+$body-font-color: $secondary-color-light-3x;
 
 
 // - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -132,6 +134,9 @@ $h5-font-size: rem-calc(20);
 
 // Paragraphs
 $paragraph-font-size: rem-calc($base-font-size);
+
+// Small
+$small-font-size: 70% !default;
 
 // <hr>
 $hr-border-color: $secondary-color;
